--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: myFirstFont;
-  src:url(font/GothiksCondensed-Light.ttf);
+  src:url(font/GothiksCondensed-Bold.ttf);
 }
-body {
+body, html {
   font-family: myFirstFont;
-  font-size: 20px;
+  font-size: 25px;
 }
 code {
   font-family: myFirstFont;
